--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
